# notes

./: .gitignore  Career Goals.md  DTN.md  Daily Checklist.md  Goals.md  Ideas.md  Mayo.md  Observations.md  README.md  bookmarks.html  data.md  ideas.md  questions.md
.obsidian/: workspace.json
Bible/: Bible.md  Genesis1.1-2.4.md
Budgetting/goals/: 01-24.md
Computer Science/Data Structures And Algorithms/: Sparse Matrix Formats.md
Computer Science/Language Features/: go.md
Computer Science/Languages/C/c_utils/src/: CMakeLists.txt  DtypeDatasource.cpp  data_structures.cpp  dtype.cpp  errors.cpp  files.c  io.cpp  logging.cpp  math.cpp  posixf.cpp  random.c  shift_buf.cpp  strings.c  strings.cpp  testing.cpp  utils.c
Computer Science/Languages/C/tools/: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  REQUIREMENTS.md  compile_commands.json
Computer Science/Languages/C/tools/demo/: caf_int_lite.sh  caf_int_normal.sh  channel.sh  channel_xm.sh  rx_lite.sh  rx_normal.sh  rx_xm.sh  tx.sh  tx_xm.sh
Computer Science/Languages/C/tools/include/core/: DtypeDatasource.hpp  data_structures.h  dtype.h  io.h  logging.h  macros.h  math.h  memory.h  shift_buff.hpp  strings.h  testing.h
Computer Science/Languages/C/tools/include/emprobe/: bluefile.h  fftcaf.h  fftcaf_peak_find.h  fftcaf_shift_reader.h  usecases.h
Computer Science/Languages/C/tools/python/: README.md  snr_vs_time_plot.py
Computer Science/Languages/C/tools/python/crtzt/: __init__.py
Computer Science/Languages/C/tools/scripts/: plot.py
Computer Science/Languages/C/tools/src/apps/: caf_interpret.cpp  channel.cpp  dtob.cpp  fftcaf.cpp  fftcaf_lite.cpp  fout.cpp  gen_sigs_highres.cpp  gmon.out  rx.cpp  sig_pwr.cpp  test.cpp  tx.cpp
Computer Science/Languages/C/tools/src/core/: DtypeDatasource.cpp  data_structures.cpp  dtype.cpp  io.cpp  logging.cpp  math.cpp  memory.cpp  shift_buf.cpp  strings.cpp
Computer Science/Languages/C/tools/src/emprobe/: bluefile.cpp  fftcaf.cpp  fftcaf_peak_find.cpp  fftcaf_shift_reader.cpp  usecases.cpp
Computer Science/Networking/: Notes.md
Computer Science/misc/: tail_recursive.md
Food/: How to Cook Turkey.md  My Protein Shake Recipe.md  turkey.md
French/: Adjectifs.md  Le Passé composé.md
GTD/: In.md  Next Actions.md  Projects.md  Someday Maybe.md  Waiting For.md  Weekly Review.md
Ideas/: ideas.md
Insightful Online Content/: System Design LinkedinPost.md
Learning/meta/: Notes.md
Life Planning/Goals/: Fitness.md
News/: 01022025.md  01172025.md
Notes/: ASIC.md  Ideas.md
Notes/Insightful Online Content/: Matt Might - Winning the War on Solving the Halting Problem.md
Notes/Rules/: Code Organization.md  Git.md
Notes/swe/: 3rd Party Abstraction.md  Vim.md
Organization/: Hackathon.md  Night Checklist.md  bookmarks.html
Organization/GTD/: In.md
Organization/Journaling/: 4-15.md  4-17.md
Planning/GTD/: In.md  README.md  Someday Maybe.md
Planning/Journaling/: 3-27.md
Planning/Life Planning/: FSA Spending.md  LifePlanning.md
Planning/logs/: 3-27.md
Politics/: Marginal vs Effective Taxes.md
Readings/fluent_forever/: Gameplan.md  Notes.md  Step1_Goals.md
Rules/: Rules.md
Scattered Stream/: Done.md  Notes.md  PBand.md
Solutions/: git.md  linux.md  neovim.md
To Sort/: Mayo Modulation Steps.md
articles/: mckinsey_education.md
life/: .music.md.swp  Bare Minimum.md  Goals.md  Main Life Morals.md  Plan.md  journal.md  music.md
mental_health/: elections.md
quick_starts/: full_ci_cd_summary.md  setting_up_server.md
swe/: .Vim.md.swp  C Sockets.md  Complexity.md  Javascript To Typescript.md
technical_portfolio/: portfolio.md
(+261 files in other folders)
